# TradeRewind

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  backtester.py  config.toml  csv_to_parquet.py  data_cleaning.py  data_loading.py  environment.yml  fortune500_scrapper.py  graph_generation.py  home_page.py  is_data_good.ipynb  metrics.py  pyproject.toml  requirements.txt  stock_history.py  strategies.py  streamlit_style.toml  test_scrapper.py  ticker_list.xlsx  ui_shared.py
.streamlit/: config.toml  streamlit_style.toml
Docs/: Component Specification Markdown.md  Functional Specification Markdown.md  Milestones Markdown.md
Scripts/: data_edgecase.py
TradeRewind/: LICENSE  README.md
charts/: __init__.py  buy_and_hold_chart.py  common.py  momentum_chart.py  moving_average_chart.py
data/: 30_yr_financial_events.csv  30_yr_market_data.csv  30_yr_symbols_data.csv  A.parquet  AAPL.csv  AAPL.parquet  ABBV.csv  ABBV.parquet  ABNB.csv  ABNB.parquet  ABT copy.csv  ABT.parquet  ACGL copy.csv  ACGL.parquet  ACN.parquet  ADBE.parquet  ADI.parquet  ADM.parquet  ADP.parquet  ADSK.parquet  AEE.parquet  AEP.parquet  AES.parquet  AFL.parquet  AIG.parquet  AIZ.parquet  AJG.parquet  AKAM.parquet  ALB.parquet  ALGN.parquet  ALL.parquet  ALLE.parquet  AMAT.parquet  AMCR.parquet  AMD.parquet  AME.parquet  AMGN.parquet  AMP.parquet  AMT.parquet  AMZN copy.csv  (+479 more)
docs/: technology_review.md
pages/: backtester_info.py  compare_tickers.py  home_page.py  stocks_info.py
strategies/: __init__.py  buy_and_hold.py  momentum.py  moving_average.py
tests/: test_additional_modules.py  (+3 more)
(+3 files in other folders)
